; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/paride/extr_pf.c_pf_queue_rq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/paride/extr_pf.c_pf_queue_rq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blk_mq_hw_ctx = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.pf_unit* }
%struct.pf_unit = type { i32 }
%struct.blk_mq_queue_data = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@pf_spin_lock = common dso_local global i32 0, align 4
@BLK_STS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.blk_mq_hw_ctx*, %struct.blk_mq_queue_data*)* @pf_queue_rq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pf_queue_rq(%struct.blk_mq_hw_ctx* %0, %struct.blk_mq_queue_data* %1) #0 {
  %3 = alloca %struct.blk_mq_hw_ctx*, align 8
  %4 = alloca %struct.blk_mq_queue_data*, align 8
  %5 = alloca %struct.pf_unit*, align 8
  store %struct.blk_mq_hw_ctx* %0, %struct.blk_mq_hw_ctx** %3, align 8
  store %struct.blk_mq_queue_data* %1, %struct.blk_mq_queue_data** %4, align 8
  %6 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %3, align 8
  %7 = getelementptr inbounds %struct.blk_mq_hw_ctx, %struct.blk_mq_hw_ctx* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.pf_unit*, %struct.pf_unit** %9, align 8
  store %struct.pf_unit* %10, %struct.pf_unit** %5, align 8
  %11 = call i32 @spin_lock_irq(i32* @pf_spin_lock)
  %12 = load %struct.blk_mq_queue_data*, %struct.blk_mq_queue_data** %4, align 8
  %13 = getelementptr inbounds %struct.blk_mq_queue_data, %struct.blk_mq_queue_data* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.pf_unit*, %struct.pf_unit** %5, align 8
  %17 = getelementptr inbounds %struct.pf_unit, %struct.pf_unit* %16, i32 0, i32 0
  %18 = call i32 @list_add_tail(i32* %15, i32* %17)
  %19 = call i32 (...) @pf_request()
  %20 = call i32 @spin_unlock_irq(i32* @pf_spin_lock)
  %21 = load i32, i32* @BLK_STS_OK, align 4
  ret i32 %21
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @pf_request(...) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
